client/src/assets/stylesheets/ratingsReviewsStyles.css
/*
*
* WIDGET CONFIGURATIONS
*
*/

/*
*
* RATINGS & REVIEWS
*
*/

.flex-between {
  display: flex;
  justify-content: space-between;
}

.flex-column {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
}

.flex-column p {
  white-space: nowrap;
  font-size: 0.9em;
}

/*
* Rating Review Container
*/

.rating-review-container {
  display: flex;
  font-size: 15px;
  gap: 1em;
  width: 100%;
}

.rnr-modal {
  height: 100vh;
  width: 100vw;
  background-color: rgb(0, 0, 0, 0.5);
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 2;
}

/*
* Review Summary
*/

.rnr-title {
  font-size: 1.4em;
  margin-top: 2.75px;
}

.rnr-summary > div {
  display: flex;
}

.rnr-avg-rating {
  font-size: 4em;
  font-weight: bold;
}

.rnr-recommended-percentile {
  font-size: 0.9em;
}

/*
* Review Submission Form
*/

.rnr-submission-form-outer {
  width: 80%;
}

.rnr-submission-form-outer,
.rnr-image-modal {
  background-color: mintcream;
  border-radius: 20px;
  padding: 1em;
}

/*
* Rating Breakdown
*/

.text-like-button {
  background: none;
  border: none;
  padding: 0;
  cursor: pointer;
  font: inherit;
  text-decoration: underline;
  color: inherit;
}

.rating-breakdown {
  display: flex;
  flex-direction: column;
  gap: 5px;
}

.rating-breakdown-rows {
  display: flex;
  flex-direction: column;
  gap: 2px;
}

.rating-breakdown-row {
  display: flex;
}

.rating-breakdown-row:hover {
  color: black;
}

.rating-breakdown-row:hover > div {
  background-color: black;
}

.rating-breakdown-row:hover > div > div {
  background-color: #1d8541;
}

.rating-breakdown-row * {
  display: inline-block;
  white-space: nowrap;
  text-align: left;
}

.rating-breakdown-row p {
  text-decoration: underline;
}

.distribution-background {
  height: 1em;
  width: 10em;
  background-color: #707070;
  margin: 0 5px;
}

.distribution-foreground {
  height: 1em;
  background-color: #73b98c;
}

.reset-filter-button {
  font-size: 0.75em;
  text-decoration: underline;
}

.filter-icon {
  display: inline-block;
  background-color: #f7f7f7;
  border: 1px solid #707070;
  border-radius: 3em;
  padding: 0.2em;
  margin: 2px;
}

.rnr-applied-filter-row {
  display: flex;
  gap: 5px;
  margin-bottom: 5px;
}

/*
* Characteristic Visualizer
*/
.rnr-characteristic-visualization {
  margin: 0.5em 0;
}

.rnr-characteristic-visualization p {
  font-size: 0.7em;
  width: 33%;
  display: inline-block;
  text-align: center;
  white-space: nowrap;
}

.rnr-characteristic-visualization p:first-child {
  text-align: start;
}

.rnr-characteristic-visualization p:last-child {
  text-align: end;
}

.rnr-characteristic-visualization > * {
  margin: 0 5%;
}

.rnr-characteristic-bar {
  height: 0.7em;
  width: 90%;
  background-color: #707070;
}

.triangle-down {
  width: 0;
  height: 0;
  border-left: 0.4em solid transparent;
  border-right: 0.4em solid transparent;
  border-top: 0.8em solid #73b98c;
  position: relative;
  top: -0.3em;
  margin-top: 0.4em;
}

/*
* Review List
*/
.review-sort-bar {
  font-size: 1.4em;
  margin: 0 5px;
  position: sticky;
  top: 0px;
  background-color: mintcream;
  z-index: 1;
}

.review-sort-bar select {
  font: inherit;
  text-decoration: underline;
  color: inherit;
  background-color: inherit;
  border: none;
}

.review-sort-bar p {
  display: inline-block;
}

.rating-review-right-column {
  width: 100%;
  overflow-x: clip;
}

.rating-review-left-column {
  margin-left: 5px;
  position: sticky;
  top: 0px;
  height: fit-content;
}

.review-list {
  max-height: calc(100% - 2em);
  margin-bottom: 1%;
}

.review-list-button {
  background-color: transparent;
  font: inherit;
  border: 1px solid #707070;
  color: inherit;
  border-radius: 0;
  padding: 10px;
  font-weight: bold;
  margin-left: 1%;
  margin-right: 1%;
  cursor: pointer;
}

/*
* Review Tile
*/

.review-tile {
  margin: 5px;
}

.review-tile > * {
  margin-bottom: 0.3em;
}

.review-tile p {
  overflow-wrap: break-word;
  hyphens: auto;
  font-size: 0.9em;
}

.review-tile h5 {
  font-weight: bold;
  font-size: 1.3em;
}

.response {
  background-color: #ededed;
  padding: 1em;
}

.response h6 {
  font-weight: bold;
  margin-bottom: 1em;
}

.img-container {
  width: 55px;
  height: 55px;
  overflow: hidden;
  border: 2px solid #707070;
  display: inline-block;
  margin: 3px 3px 3px 0;
  cursor: pointer;
}

.img-container img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}

.helpful-bar * {
  display: inline-block;
}

.helpful-bar p {
  margin-right: 5px;
}

.helpful-bar button {
  margin-right: 3px;
  color: black;
}

.rnr-image-modal {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  gap: 5px;
}

.rnr-image-modal * {
  display: block;
}

.rnr-image-modal img {
  max-width: 80vw;
  max-height: 80vh;
}

.button-no-styling {
  border: none;
  background: transparent;
  padding: 0;
  height: 100%;
  width: 100%;
}

.rnr-recommended {
  display: flex;
  align-items: center;
}

/*
* Review submission form
*/
.rnr-required {
  color: red;
}

.rnr-submission-form {
  display: flex;
  flex-direction: column;
  gap: 10px;
  max-height: 80vh;
  overflow-y: auto;
  width: 100%;
}

.rnr-submission-form hr {
  margin: 0;
}

.rnr-overall-rating {
  display: flex;
  align-items: center;
  gap: 5px;
}

.rnr-submission-form label:has(input[type='text']),
.rnr-submission-form label:has(textarea) {
  display: flex;
  flex-direction: column;
  gap: 3px;
}

.rnr-submission-form input[type='text'],
.rnr-submission-form textarea {
  border: 1px solid #707070;
  border-radius: 3px;
  color: #707070;
  padding: 2px;
  background-color: mintcream;
}

.rnr-submission-form textarea {
  resize: none;
}

.rnr-submission-form label:has(input[type='radio']:checked) {
  font-weight: bold;
}

.rnr-submission-form button {
  width: fit-content;
}

.rnr-characteristic-rows {
  display: flex;
  flex-wrap: wrap;
  column-gap: 10%;
  row-gap: 5px;
}

.rnr-characteristic-rows > div {
  flex: 40%;
}

.rnr-characteristic-row {
  width: fit-content;
  height: fit-content;
}

.rnr-characteristic-title-row {
  display: flex;
  justify-content: space-between;
  align-items: baseline;
  gap: 15px;
}

.rnr-submission-form h6 {
  font-size: 1.5em;
  font-weight: bold;
}

